fix(gantt): constrain layout width and enable horizontal scroll

--- a/client/src/components/common/Gantt/Gantt.module.scss
+++ b/client/src/components/common/Gantt/Gantt.module.scss
@@ -1,25 +1,14 @@
 :global(#app) {
   .wrapper {
-    display: flex;
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: auto 1fr;
     width: 100%;
   }
 
-  .leftPane {
-    flex: 0 0 200px;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-  }
-
-  .rightPane {
-    flex: 1 1 0;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-  }
-
   .leftHeader {
-    flex: 0 0 200px;
+    grid-column: 1;
+    grid-row: 1;
     display: flex;
     align-items: center;
     height: 48px;
@@ -27,8 +16,9 @@
   }
 
   .rightHeader {
+    grid-column: 2;
+    grid-row: 1;
     overflow-x: auto;
-    flex: 1 1 0;
     display: flex;
     flex-direction: column;
     min-width: 0;
@@ -59,13 +49,16 @@
   }
 
   .leftColumn {
+    grid-column: 1;
+    grid-row: 2;
     display: flex;
     flex-direction: column;
   }
 
   .rightColumn {
+    grid-column: 2;
+    grid-row: 2;
     overflow-x: auto;
-    flex: 1 1 auto;
     min-width: 0;
   }
 
